# archon

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmarks.yml  release.yml  test.yml
archup/: archup  docker-compose.yml  install  start-archon.sh
benches/: channels.rs  harness.rs
src/: batch.rs  builder.rs  channels.rs  client.rs  config.rs  driver.rs  errors.rs  lib.rs  macros.rs  metrics.rs  pipeline.rs  pipeline_builder.rs  rollup.rs  state.rs  telemetry.rs  transactions.rs
tests/: l1_client.rs  rollup_node.rs
