[package]
name = "archon"
version = "0.1.0-alpha"
edition = "2021"
authors = ["refcell"]
description = "Optimism batch submitter"
repository = "https://github.com/refcell/archon"
license = "MIT"
keywords = ["Optimism", "op", "archon", "node", "ethereum"]

[[bin]]
name = "archon"
path = "bin/archon.rs"

[[bench]]
name = "channels"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"
futures = "0.3.26"
eyre = "0.6.8"
hex = "0.4.3"
libflate = "1.2.0"

# Logging Telemetry
chrono = "0.4.22"
tracing = "0.1.36"
ansi_term = "0.12.1"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }

# Serialization
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"

# Backend Crates
sled = "0.34.7"
uuid = { version = "1.3.0", features = ["v4"] }
bytes = "1.4.0"
reqwest = "0.11.14"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
home = "0.5.4"

# CLI
figment = { version = "0.10.8", features = ["toml", "env"] }
ctrlc = "3.2.3"
clap = { version = "3.2.18", features = ["derive", "env"] }
dirs = "4.0.0"
thiserror = "1.0.39"
flate2 = { version = "1.0.25", features = ["zlib"] }
once_cell = "1.17.1"

# Ethers
ethers-core = "1.0.2"
ethers-providers = "1.0.2"
ethers-middleware = "1.0.2"
ethers-signers = "1.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tracing-test = "0.2.4"
criterion = { version = "0.4", features = [ "async_tokio", "plotters" ]}
plotters = "0.3.4"
tempfile = "3.4.0"
